# oeis_data

./: pyproject.toml
.github/workflows/: create_db.yml
A002402/: A002405.py
data/: .gitignore
oeis_data/: create_db.py
